@@ -5,6 +5,7 @@ server:
 	val-override-date: "20070916134226"
 	target-fetch-policy: "0 0 0 0 0"
 	fake-sha1: yes
+	harden-algo-downgrade: yes
 
 stub-zone:
 	name: "."
