@@ -6,14 +6,14 @@ server:
 	target-fetch-policy: "0 0 0 0 0"
 	fake-dsa: yes
 	fake-sha1: yes
-	harden-algo-downgrade: yes
+	harden-algo-downgrade: no
 
 stub-zone:
 	name: "."
 	stub-addr: 193.0.14.129 	# K.ROOT-SERVERS.NET.
 CONFIG_END
 
-SCENARIO_BEGIN Test validator with SHA256 DS downgrade to SHA1
+SCENARIO_BEGIN Test validator with SHA256 DS downgrade to SHA1 lenience
 
 ; K.ROOT-SERVERS.NET.
 RANGE_BEGIN 0 100
@@ -214,12 +214,12 @@ ENTRY_END
 STEP 10 CHECK_ANSWER
 ENTRY_BEGIN
 MATCH all
-REPLY QR RD RA DO SERVFAIL
+REPLY QR RD RA AD DO NOERROR
 SECTION QUESTION
 www.sub.example.com. IN A
 SECTION ANSWER
-;www.sub.example.com. 	3600	IN	A	11.11.11.11
-;www.sub.example.com.    3600    IN      RRSIG   A 5 4 3600 20070926134150 20070829134150 30899 sub.example.com. 0DqqRfRtm7VSEQ4mmBbzrKRqQAay3JAE8DPDGmjtokrrjN9F1G/HxozDV7bjdIh2EChlQea8FPwf/GepJMUVxg== ;{id = 30899}
+www.sub.example.com. 	3600	IN	A	11.11.11.11
+www.sub.example.com.    3600    IN      RRSIG   A 5 4 3600 20070926134150 20070829134150 30899 sub.example.com. 0DqqRfRtm7VSEQ4mmBbzrKRqQAay3JAE8DPDGmjtokrrjN9F1G/HxozDV7bjdIh2EChlQea8FPwf/GepJMUVxg== ;{id = 30899}
 SECTION AUTHORITY
 SECTION ADDITIONAL
 ENTRY_END
