@@ -1,3 +1,7 @@
+10 April 2017: Wouter
+	- harden algo downgrade also makes unbound more lenient about digest
+	  algorithms in DS records.
+
 10 April 2017: Ralph
 	- Remove ECS option after REFUSED answer.
 	- Fix small memory leak in edns_opt_copy_alloc.
